--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "daily-harmony---smart-memo-&-insights",
+  "name": "smlocal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
