--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
+
 {
-  "name": "smlocal251223",
+  "name": "daily-harmony",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,19 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "react": "^19.2.3",
-    "@google/genai": "^1.34.0",
-    "lucide-react": "^0.562.0",
-    "recharts": "^3.6.0",
-    "@supabase/supabase-js": "^2.89.0",
-    "date-fns": "^4.1.0",
-    "lunar-javascript": "^1.6.12"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "lucide-react": "0.460.0",
+    "recharts": "2.13.3",
+    "@google/genai": "1.3.0",
+    "@supabase/supabase-js": "2.47.2",
+    "date-fns": "4.1.0",
+    "lunar-javascript": "1.6.12"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@vitejs/plugin-react": "^4.3.0",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
